# ecal_shm_layer

./: CMakeLists.txt  main.cpp
include/ecal/: ecal.h  ecal_log.h
include/time/: time_stop_watch.h
src/: ecal_global_accessors.cpp  ecal_global_accessors.h  ecal_globals.cpp  ecal_globals.h
src/io/shm/: ecal_memfile_broadcast.cpp  ecal_memfile_broadcast_reader.cpp  ecal_memfile_broadcast_writer.cpp  ecal_memfile_sync.cpp
src/readwrite/: ecal_reader.cpp  ecal_reader.h  ecal_writer.cpp  ecal_writer.h
